[package]
name = "wiivff"
version = "0.1.1"
edition = "2021"
authors = ["Hector Martin", "Andrew Piroli"]
description = "View and dump VFF (Virtual Fat Filesystem) files used by the Wii console"
repository = "https://github.com/AndrewPiroli/WiiVFF"

[dependencies]
bitflags = "1.3.2"
byteorder = "1.4.3"
byteorder-pack = "0.1.0"
clap = { version = "4.0.26", features = ["derive"] }
thiserror = "1.0.37"

[profile.release]
lto = true
