[package]
name = "wiivff"
version = "0.2.0"
edition = "2021"
authors = ["Hector Martin", "Andrew Piroli"]
description = "View and dump VFF (Virtual Fat Filesystem) files used by the Wii console"
repository = "https://github.com/AndrewPiroli/WiiVFF"

[dependencies]
bitflags = "1.3.2"
byteorder = "1.4.3"
byteorder-pack = "0.1.0"
clap = { version = "4.2.1", features = ["derive"] }
thiserror = "1.0.40"

[profile.release]
lto = true
