[package]
name = "wiivff"
version = "0.3.0"
edition = "2021"
authors = ["Hector Martin", "Andrew Piroli"]
description = "View and dump VFF (Virtual Fat Filesystem) files used by the Wii console"
repository = "https://github.com/AndrewPiroli/WiiVFF"

[dependencies]
bitflags = "~2.6.0"
byteorder = "~1.5.0"
byteorder-pack = "~0.1.0"
clap = { version = "~4.5.18",default-features = false, features = ["std", "derive", "help", "usage", "suggestions", "error-context"] }
thiserror = "~1.0.40"

[profile.release]
lto = true
